# careers-engine

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
assets/: README.md
scripts/: collect.py  fetch_logos.py  publish.py
src/careers_engine/: __init__.py  config.py  pipeline.py
src/careers_engine/company/: __init__.py  logos.py  metadata.py  registry.py  slugs.py
src/careers_engine/discord/: __init__.py  client.py  formatter.py  publisher.py
src/careers_engine/fetchers/: __init__.py  base.py  http.py
src/careers_engine/filters/: __init__.py  base.py  india.py
src/careers_engine/models/: __init__.py  enums.py  job.py
src/careers_engine/parsers/: __init__.py  base.py  markdown_table.py
src/careers_engine/sources/: __init__.py  base.py  private.py  upstream.py
src/careers_engine/storage/: __init__.py  database.py  history.py
tests/: test_client.py  test_company.py  test_fetcher.py  test_filters.py  test_formatter.py  test_job.py  test_parser.py  test_pipeline.py  test_publisher.py  test_sources.py  test_storage.py
tests/fixtures/: intern_intl.md
