[project]
name = "careers-engine"
version = "0.1.0"
description = "Job aggregation and publishing platform powering ZenYukti Jobs."
readme = "README.md"
requires-python = ">=3.12"

authors = [
    { name = "ZenYukti" }
]

dependencies = [
    "beautifulsoup4>=4.15.0",
    "discord-py>=2.7.1",
    "httpx>=0.28.1",
    "lxml>=6.1.1",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
